# system_r

./: .gitignore  AUTHORS.md  COPYRIGHT  Cargo.toml  README.md  system-f.srpt
06_system_f/: Cargo.toml  system-f.srpt  test.srpt
06_system_f/src/: diagnostics.rs  eval.rs  lib.rs  macros.rs  platform_bindings.rs  testing.rs  visit.rs
06_system_f/src/patterns/: mod.rs
06_system_f/src/syntax/: lexer.rs  mod.rs  parser.rs
06_system_f/src/system_r_util/: diagnostic.rs  mod.rs
06_system_f/src/terms/: mod.rs  visit.rs
06_system_f/src/types/: mod.rs  visit.rs
eval/: Cargo.toml
eval/src/: interpreter.rs  lib.rs  testing.rs
specs/: Cargo.toml
specs/benches/: default.rs
specs/benches/platform_bindings/: arith.rs
specs/features/dialects/: pending.feature  type-alias.feature
specs/features/system_r/: data.feature  dialect.feature  hello-world.feature  let.feature  mod.rs  pack-unpack-exists.feature  plaintext.feature  platform-bindings.feature  recursion.feature  rough-edges.feature  tech-debt.feature  terms-abs-app.feature
specs/src/: lib.rs
specs/src/common/: mod.rs
specs/src/common/extensions/: mod.rs
specs/src/common/platform_bindings/: arith.rs
specs/src/steps/: dialect.rs  literals.rs  mod.rs  plaintext.rs  system_r.rs
specs/tests/: specs.rs
system_r/: Cargo.toml
system_r/benches/: default.rs
system_r/benches/platform_bindings/: arith.rs
system_r/src/: bottom.rs  diagnostics.rs  eval.rs  lib.rs  macros.rs  platform_bindings.rs  testing.rs  visit.rs
system_r/src/dialect/: mod.rs  type_alias.rs
system_r/src/dialect/bottom/: mod.rs  plaintext.rs
system_r/src/feedback/: mod.rs  syntax.rs  type_check.rs
system_r/src/feedback/catalog/: mod.rs  syntax.rs  type_check.rs
system_r/src/patterns/: mod.rs
system_r/src/syntax/: error.rs  lexer.rs  mod.rs  parser.rs
system_r/src/terms/: mod.rs  plaintext.rs  visit.rs
system_r/src/type_check/: error.rs  mod.rs  patterns.rs  visit.rs
system_r/src/util/: diagnostic.rs  mod.rs
system_r/tests/common/: mod.rs
system_r/tests/common/extensions/: mod.rs
system_r/tests/common/platform_bindings/: arith.rs
system_r/tests/steps/: dialect.rs  system_r.rs
(+69 files in other folders)
